--- a/submodules/TelegramUI/BUILD
+++ b/submodules/TelegramUI/BUILD
@@ -30,8 +30,6 @@ available_appcenter_targets = [
     "@appcenter_sdk//:AppCenterCrashes",
 ]
 
-appcenter_targets = available_appcenter_targets
-
 swift_library(
     name = "TelegramUI",
     module_name = "TelegramUI",
@@ -240,8 +238,8 @@ swift_library(
         "//submodules/WallpaperBackgroundNode:WallpaperBackgroundNode",
         "//submodules/ComponentFlow:ComponentFlow",
     ] + select({
-        "@build_bazel_rules_apple//apple:ios_armv7": appcenter_targets,
-        "@build_bazel_rules_apple//apple:ios_arm64": appcenter_targets,
+        "@build_bazel_rules_apple//apple:ios_armv7": available_appcenter_targets,
+        "@build_bazel_rules_apple//apple:ios_arm64": available_appcenter_targets,
         "//build-system:ios_sim_arm64": [],
         "@build_bazel_rules_apple//apple:ios_x86_64": [],
     }),
