[HRB-1055] Fixed settings icons

--- a/submodules/TelegramUI/BUILD
+++ b/submodules/TelegramUI/BUILD
@@ -257,8 +257,8 @@ swift_library(
     ] + select({
         "@build_bazel_rules_apple//apple:ios_armv7": available_appcenter_targets,
         "@build_bazel_rules_apple//apple:ios_arm64": available_appcenter_targets,
-        "//build-system:ios_sim_arm64": available_appcenter_targets,
-        "@build_bazel_rules_apple//apple:ios_x86_64": available_appcenter_targets,
+        "//build-system:ios_sim_arm64": [],
+        "@build_bazel_rules_apple//apple:ios_x86_64": [],
     }),
     visibility = [
         "//visibility:public",
